[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/DialogGraph/Scenes/Nodes/MatchNode.gd" type="Script" id=1]
[ext_resource path="res://addons/DialogGraph/font/Nunito-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/DialogGraph/Scenes/Nodes/MatchNodeCase.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
extra_spacing_top = -12
extra_spacing_bottom = -10
font_data = ExtResource( 2 )

[node name="MatchNode" type="GraphNode"]
margin_right = 180.0
margin_bottom = 118.0
rect_min_size = Vector2( 180, 90 )
custom_constants/separation = 5
title = "MatchNode"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Variable" type="OptionButton" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 164.0
margin_bottom = 44.0
text = "Variable"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 49.0
margin_right = 164.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( -104, -58 )

[node name="add_case" type="Button" parent="HBoxContainer"]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
text = "+"
icon_align = 1

[node name="minus_case" type="Button" parent="HBoxContainer"]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
text = "-"
icon_align = 1

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 58.0
margin_top = 5.0
margin_right = 95.0
margin_bottom = 19.0
text = "Cases"

[node name="MatchNodeCase_1" parent="." instance=ExtResource( 3 )]
is_default = true

[connection signal="resize_request" from="." to="." method="_on_MatchNode_resize_request"]
[connection signal="button_down" from="Variable" to="." method="_on_Variable_button_down"]
[connection signal="focus_exited" from="Variable" to="." method="_on_Variable_focus_exited"]
[connection signal="pressed" from="HBoxContainer/add_case" to="." method="_on_add_case_pressed"]
[connection signal="pressed" from="HBoxContainer/minus_case" to="." method="_on_minus_case_pressed"]
